[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byakugan"
version = "0.1.0"
description = "API Security Scanner"
requires-python = ">=3.8.10"
dependencies = [
    "pyyaml>=6.0.1",
    "graphql-core>=3.2.3",
    "xmltodict>=0.13.0",
    "PyJWT>=2.8.0",     # Thêm dependency PyJWT
    "cryptography>=41.0.0"  # Thêm dependency cho JWT crypto
]

[tool.setuptools]
packages = ["byakugan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --cov=byakugan --cov-report=term-missing"